--- a/excellence/index.html
+++ b/excellence/index.html
@@ -71,7 +71,7 @@
 
     <section>
       <p>
-        As an Emergency Automation Support Engineer, Justin has supported operations at over <strong>100 Amazon Fulfillment Centers</strong> across the United States. During each high-impact event, he quickly stabilized production, coordinated with the right stakeholders, led detailed root-cause analyses, and ensured that lessons learned were clearly communicated to improve site operations and maintenance teams.
+        As an Emergency Automation Support Engineer, Justin has supported operations at over <strong>100 Various Warehouses and Manufacturing Facilities</strong> across the United States. During each high-impact event, he quickly stabilized production, coordinated with the right stakeholders, led detailed root-cause analyses, and ensured that lessons learned were clearly communicated to improve site operations and maintenance teams.
       </p>
     </section>
 
@@ -122,13 +122,6 @@
       <h2>Site-Wide Instability Post-Launch</h2>
       <p>
         A newly launched fulfillment site faced persistent throughput losses and frequent automation faults during its initial weeks of operation. Justin led a full-system triage effort, covering mechanical alignment, PLC logic, and software coordination. After prioritizing high-impact bottlenecks and refining control logic, throughput stabilized and alarms were significantly reduced. The underlying cause was inconsistent commissioning standards across subsystems. A post-launch validation checklist was created to confirm full functional readiness before operational handoff.
-      </p>
-    </section>
-
-    <section>
-      <h2>Building-Level Jam and DPMO Reduction</h2>
-      <p>
-        At a large fulfillment center, high jam rates and defect levels were restricting building throughput. Over several weeks, Justin implemented a targeted improvement plan focusing on control logic optimization, operator retraining, and data-driven issue prioritization. By Week 17, total jams dropped to <strong>10,960</strong> (−36.5%) and DPMO improved to <strong>1,870</strong> (−43.1%), even as building volume increased by over 10%. This initiative demonstrated how structured data review, disciplined tuning, and team alignment can yield measurable operational improvements.
       </p>
     </section>
 
