--- a/projects/index.html
+++ b/projects/index.html
@@ -101,8 +101,8 @@
         You can view technical documentation from the project below:
       </p>
       <ul>
-        <li><a href="/assets/docs/YCP_Racing_Suspension_Report.pdf" target="_blank">Suspension Design Report (PDF)</a></li>
-        <li><a href="/assets/docs/YCP_Racing_CAD_Drawings.pdf" target="_blank">Component Drawings (PDF)</a></li>
+        <li><a href="/assets/reports/Formula_Smyth_Steering- ARB_Su21.pdf" target="_blank">FSAE Summer Capstone Final Report (Analysis and Design)</a></li>
+        <li><a href="/assets/reports/Formula_Smyth_Steering- ARB_Spr22.pdf" target="_blank">FSAE Spring Capstone Final Report (Execution and Build)</a></li>
       </ul>
     </section>
 
