--- a/education/index.html
+++ b/education/index.html
@@ -152,6 +152,13 @@
       <p>
         As part of YCP Racing, for our Captstone I and II, I was integrated on the suspension team responsible for steering, anti roll bars, as well as assembling our teams Bill of materials. 
       </p>
+       <p>
+        You can view my final Capstone Project Documentation Below:
+      </p>
+      <ul>
+        <li><a href="/assets/reports/Formula_Smyth_Steering- ARB_Su21.pdf" target="_blank">FSAE Summer Capstone Final Report (Analysis and Design)</a></li>
+        <li><a href=".assets/reports/Formula_Smyth_Steering_ARB_Spr22 .pdf" target="_blank">FSAE Spring Capstone Final Report (Execution and Build)</a></li>
+      </ul>
     </section>
 
     <!-- Back to Home -->
