--- a/projects/index.html
+++ b/projects/index.html
@@ -102,7 +102,7 @@
       </p>
       <ul>
         <li><a href="/assets/reports/Formula_Smyth_Steering- ARB_Su21.pdf" target="_blank">FSAE Summer Capstone Final Report (Analysis and Design)</a></li>
-        <li><a href=".assets/reports/Formula_Smyth_Steering_ARB_Spr22 .pdf" target="_blank">FSAE Spring Capstone Final Report (Execution and Build)</a></li>
+        <li><a href="/assets/reports/Formula_Smyth_Steering_ARB_Spr22.pdf" target="_blank">FSAE Spring Capstone Final Report (Execution and Build)</a></li>
       </ul>
     </section>
 
