--- a/projects/index.html
+++ b/projects/index.html
@@ -83,6 +83,9 @@
       <p>
         As a Lead Automation Engineer, Justin developed and deployed a comprehensive <strong>Critical Path Optimization (CPO)</strong> program on behalf of his company’s largest customer. This program unified system performance analysis, jam data analytics, and PLC parameter tuning across dozens of facilities nationwide. Justin worked directly with operations, maintenance, and controls teams to identify throughput constraints, verify controls logic consistency, and ensure that both short-term fixes and long-term process changes were implemented effectively. The initiative has since become a repeatable consulting framework used to drive measurable improvements in reliability, efficiency, and throughput across large-scale fulfillment centers.
       </p>
+      <p>
+        If you would like to see some of the reports, please feel free to contact me directly
+      </p>
     </section>
 
     <section>
